--- a/src/components/HeroImgStyle.css
+++ b/src/components/HeroImgStyle.css
@@ -41,6 +41,12 @@
     padding: 0.6rem 0 1.5rem;
 }
 
+.hero h1, h4, p, a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+  }
+  
+
 .hero .content p{
     font-size: 1.4rem;
     font-weight: 200;
@@ -49,6 +55,11 @@
 
 .content .btn{
     margin: 1rem 0.2rem;
+}
+.git-Calender{
+    background-color: white;
+    margin: 1rem;
+    margin-top: 0;
 }
 
 @media screen and (max-width: 874px) {
